<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="mx.marcosyamir.actividad2final.MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etNombreCompleto"
        android:inputType="text"
        android:hint="@string/nombre_completo"
        android:layout_marginTop="@dimen/top"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/etFechaNacimiento"
        android:hint="@string/fecha_nacimiento"
        android:layout_marginTop="@dimen/top"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etTelefono"
        android:inputType="text"
        android:hint="@string/telefono"
        android:layout_marginTop="@dimen/top"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etEmail"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:layout_marginTop="@dimen/top"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:inputType="textMultiLine"
        android:id="@+id/etDescripcion"
        android:hint="@string/descripcion_contacto"
        android:layout_marginTop="@dimen/top"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Siguiente"
            android:id="@+id/btnSiguiente"
            android:layout_alignParentBottom="true"         />
    </RelativeLayout>



</LinearLayout>
