<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="mx.marcosyamir.actividad2final.DetalleContacto">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvTitulo"
        android:text="@string/titulo_detalle"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:textSize="@dimen/titulo_detalle"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvNombreCompleto"
        android:layout_marginTop="@dimen/top"
        android:text="@string/nombre_completo"
        android:layout_marginLeft="@dimen/Left"
        android:textSize="@dimen/texto_detalle"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvFechaNacimiento"
            android:layout_marginTop="@dimen/top"
            android:text="@string/fecha_nacimiento"
            android:layout_marginLeft="@dimen/Left"
            android:textSize="@dimen/texto_detalle"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvTelefono"
            android:layout_marginTop="@dimen/top"
            android:text="@string/telefono"
            android:layout_marginLeft="@dimen/Left"
            android:textSize="@dimen/texto_detalle"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvEmail"
            android:layout_marginTop="@dimen/top"
            android:text="@string/email"
            android:layout_marginLeft="@dimen/Left"
            android:textSize="@dimen/texto_detalle"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvDescripcionContacto"
            android:layout_marginTop="@dimen/top"
            android:text="@string/descripcion_contacto"
            android:layout_marginLeft="@dimen/Left"
            android:textSize="@dimen/texto_detalle"
            android:textStyle="bold" />
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnEditar"
        android:layout_gravity="center"
        android:text="Editar"
        android:layout_marginTop="@dimen/top"/>



     </LinearLayout>


